--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "budget-app",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.6",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vuex": "^3.0.2",
+    "vue-router": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
