--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "budget-app",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,7 +10,11 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.6",
-    "vue": "^2.6.14"
+    "vue": "^2.7.13",
+    "vuex": "^3.1.3",
+    "vue-router": "^3.0.0",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -20,7 +24,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.7.13"
   },
   "eslintConfig": {
     "root": true,
